<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@color/colorAccent"
    app:cardCornerRadius="20dp"
    android:padding="8dp"
    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        >

        <TextView
            android:id="@+id/locks_txt_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/ledige_locks"
            android:fontFamily="@font/montserrat"
            android:text="@string/locksnr"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/sykkel_txt_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.025"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stasjonsnavn_txt_id" />

        <TextView
            android:id="@+id/stasjonsnavn_txt_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/stasjonsnavn"
            android:fontFamily="@font/montserrat"
            android:text="@string/stasjonsnavn"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.029"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sykkel_txt_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/ledige_sykler"
            android:fontFamily="@font/montserrat"
            android:text="@string/ledige_sykler"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="@+id/locks_txt_id"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/locks_txt_id"
            app:layout_constraintTop_toBottomOf="@+id/locks_txt_id" />

        <TextView
            android:id="@+id/ledige_sykler_antall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/antall_ledige_sykler"
            android:fontFamily="@font/montserrat"
            android:text="@string/antallsykler"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/sykkel_txt_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.235"
            app:layout_constraintStart_toEndOf="@+id/sykkel_txt_id"
            app:layout_constraintTop_toTopOf="@+id/sykkel_txt_id"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/antall_ledige_locks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/antalllocks"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/locks_txt_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.246"
            app:layout_constraintStart_toEndOf="@+id/locks_txt_id"
            app:layout_constraintTop_toTopOf="@+id/locks_txt_id"
            app:layout_constraintVertical_bias="0.0" />
    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>